# examples

./: CMakeLists.txt  Inputs.cpp  Swaping_Char.cpp  alter_std_to_h.cpp  convert_datatype.cpp  main.cpp  nullptr.cpp  structure.cpp  w3school_input.cpp
