cmake_minimum_required(VERSION 3.23)
project(clion_1)

set(CMAKE_CXX_STANDARD 20)

#add_executable(clion_1 Swaping_Char.cpp Inputs.cpp)
#add_executable(clion_1 structure.cpp)
#add_executable(clion_1 w3school_input.cpp)
add_executable(clion_1 Inputs.cpp)
#add_executable(clion_1 convert_datatype.cpp)
#add_executable(clion_1 alter_std_to_h.cpp nullptr.cpp)
#add_executable(clion_1  nullptr.cpp)

